--- a/calc-app/index.html
+++ b/calc-app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    <title>Sample Calculator &copy;2015 fdx software</title>
+    <title>Sample Calculator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <link href="content/jquery.mobile-1.1.0.min.css" rel="stylesheet" type="text/css" />
@@ -13,7 +13,7 @@
 
 <div id="calculator" data-role="page" data-theme="a" data-fdx-jspage="calculator">
     <header data-role="header">
-        <h1>&copy;2015 fdx software</h1>
+        <h1>$copy;2015 FDX Software</h1>
     </header>
     <section data-role="content" >
         <input type="text"  id="displayControl" style="text-align: right;" value="0" />
@@ -42,7 +42,7 @@
     </section>
 </div>
 
-<script src="scripts/jquery-1.7.1.min.js" type="text/javascript"></script>
-<script src="scripts/appMain.js" type="text/javascript"></script>
+<script src="scripts/hideAddressBar.js" type="text/javascript"></script>
+<script src="scripts/app.js" type="text/javascript"></script>
 </body>
 </html>
