--- a/calc-app/index.html
+++ b/calc-app/index.html
@@ -13,7 +13,7 @@
 
 <div id="calculator" data-role="page" data-theme="a" data-fdx-jspage="calculator">
     <header data-role="header">
-        <h1>&copy;2015 FDX Software</h1>
+        <h1>&copy;2015 FDX</h1>
     </header>
     <section data-role="content" >
         <input type="text"  id="displayControl" style="text-align: right;" value="0" />
